--- a/og.html
+++ b/og.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta property="og:title"			content="테스트 - 네이버 뉴스"/>
-    <meta property="og:url"			content="http://beta.news.naver.com/main/home.naver"/>
-    <meta property="og:image"			content="https://ssl.pstatic.net/static.news/image/news/ogtag/navernews_800x420_20221201.png"/>
-    <meta property="og:description"	content="정치, 경제, 사회, 생활/문화, 세계, IT/과학 등 언론사별, 분야별 뉴스 기사 제공"/>
+<title>네이버 MY건강</title>
+<meta property="og:url" content="https://hspace.naver.com" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="네이버 MY건강" />
+<meta property="og:description" content="나의 걸음 수 정보를 확인해보세요" />
+<meta property="og:image" content="https://ssl.pstatic.net/static.news/image/news/healthservice/2023/11/3/1/og.png" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta property="twitter:domain" content="hspace.naver.com" />
+<meta property="twitter:url" content="https://hspace.naver.com" />
+<meta name="twitter:title" content="네이버 MY건강" />
+<meta name="twitter:description" content="나의 걸음 수 정보를 확인해보세요" />
+<meta name="twitter:image" content="https://ssl.pstatic.net/static.news/image/news/healthservice/2023/11/3/1/og.png" />
 </head>
 <body>
 
