--- a/og.html
+++ b/og.html
@@ -3,13 +3,11 @@
 <head>
 <title>네이버 MY건강</title>
 
-<meta property="og:url" content="https://hspace.naver.com" />
+<meta property="og:url" content="https://hspace.naver.com/events/happybean" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="네이버 MY건강" />
-<meta property="og:description" content="나의 걸음 수 정보를 확인해보세요-------" />
+<meta property="og:title" content="네이버 만보기 이벤트" />
+<meta property="og:description" content="네이버 만보기를 사용하고 이벤트에 참여하세요" />
 <meta property="og:image" content="https://ssl.pstatic.net/static.news/image/news/healthservice/2023/11/3/1/og.png" />
-
-<meta property="article:author" content="네이버" />
 
 </head>
 <body>
